kubernetes/apps/paperless-ngx/deployment-gotenberg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-gotenberg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-gotenberg
    spec:
      serviceAccountName: paperless-ngx
      automountServiceAccountToken: false
      containers:
        - name: gotenberg
          image: docker.io/gotenberg/gotenberg
          imagePullPolicy: IfNotPresent
          args:
            - gotenberg
            - --chromium-disable-javascript=true
            - --chromium-allow-list=file:///tmp/.*
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      nodeSelector:
        worker: "true"
