kubernetes/apps/paperless-ngx/deployment-tika.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-tika
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-tika
    spec:
      serviceAccountName: paperless-ngx
      automountServiceAccountToken: false
      containers:
        - name: tika
          image: docker.io/apache/tika
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9998
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      nodeSelector:
        worker: "true"
