kubernetes/apps/paperless-ngx/deployment-webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-webserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-webserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-webserver
    spec:
      serviceAccountName: paperless-ngx
      automountServiceAccountToken: false
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 512Mi
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
            - name: paperless-nfs
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-nfs
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: paperless-nfs
              mountPath: /usr/src/paperless/consume
              subPath: consume
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data-pvc
        - name: paperless-nfs
          persistentVolumeClaim:
            claimName: paperless-nfs-pvc
      nodeSelector:
        worker: "true"
