kubernetes/apps/paperless-ngx/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-broker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-broker
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: valkey
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-webserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-webserver
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-gotenberg
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-tika
  ports:
    - port: 9998
      targetPort: 9998
      protocol: TCP
      name: http
