kubernetes/apps/paperless-ngx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: home-lungoo-de-tls
  routes:
    - match: Host(`paperless-testing.home.lungoo.de`)
      kind: Rule
      services:
        - name: paperless-webserver
          port: 8000
